--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -4069,7 +4069,6 @@ body[class*=jconfirm-no-scroll-] {
   span {
     color: $brand-primary;
   }
-  
   &.pending {
     background-color: #00A7E0;
   }
@@ -4095,6 +4094,9 @@ body[class*=jconfirm-no-scroll-] {
     }
     &.banner-voting-closes {
       max-width: 260px;
+    }
+    &.badge-awaiting-winners {
+      max-width: 280px;
     }
     @include media-breakpoint-down(md) {
       margin-bottom: 30px;
