--- a/themes/eric/sass/styles.scss
+++ b/themes/eric/sass/styles.scss
@@ -336,12 +336,12 @@ em {
         line-height: 1em;
         text-transform: uppercase;
         color: inherit;
-        padding: 10px 20px;
+        padding: 10px 53px;
       }
       
       &:first-child {
         > a {
-          padding: 10px 26px;
+          /*padding: 10px 26px;*/
         }
       }
       &.current-menu-item, &.current-menu-ancestor {
@@ -2226,6 +2226,8 @@ em {
 }
 
 
+
+
 #schedule {
   margin-top: 50px;
   border-top: 5px solid #000;
@@ -2281,6 +2283,9 @@ em {
     }
   }
 }
+
+
+
 
 
 
@@ -3848,24 +3853,27 @@ body[class*=jconfirm-no-scroll-] {
  */
 #semifinalists-list {
   margin-top: 40px;
-  
-  .col-md-4:nth-of-type(1n+4) {
-    .semifinalist {
-      margin-bottom: 0;
-    }
+  .hline {
+    margin: 40px 0;
+    height: 1px;
+    background: #d5d5d5;
   }
   
-  .banner-demoday {
-    margin: 0 auto 40px;
-    max-width: 260px;
-  }
   .semifinalist {
-    padding-bottom: 20px;
-    margin-bottom: 40px;
-    position: relative;
-    img {
-      margin: 0 auto 15px;
+    .semifinalist-header {
+      padding-left: 220px;
+      min-height: 110px;
+      position: relative;
+      margin-bottom: 20px;
+      img {
+        position: absolute;
+        left: 0; top: 0;
+        margin: 0;
+        max-width: 220px;
+        height: auto;
+      }
     }
+    
     h4, .title, .url {
       font-family: $font-family-sans-serif;
     }
@@ -3873,7 +3881,7 @@ body[class*=jconfirm-no-scroll-] {
       font-size: 1.5em;
       line-height: 1.3;
       font-weight: 700;
-      margin: 0 0 15px; padding: 0;
+      margin: 0 0 10px; padding: 0;
     }
     .title {
       font-weight: 300;
@@ -3890,12 +3898,22 @@ body[class*=jconfirm-no-scroll-] {
   }
   @include media-breakpoint-down(sm) {
     margin-top: 30px;
-    .col-md-4:nth-of-type(1n+4) {
-      .semifinalist {
-        margin-bottom: 40px;
-      }
-    }
     .semifinalist {
+      .semifinalist-header {
+        padding-left: 0;
+        min-height: auto;
+        img {
+          position: static;
+          left: auto; top: auto;
+          margin: 0 auto 20px;
+          max-width: 290px;
+        }
+      }
+      .description {
+        margin: 0 0 30px;
+      }
+      
+      
       h4 {
         font-size: 1.5em;
         font-weight: 700;
@@ -3905,7 +3923,7 @@ body[class*=jconfirm-no-scroll-] {
   }
 }
 
-.banner-mentorship {
+.banner-mentorship, .banner-winner {
   img {
     width: 100%;
     height: auto;
@@ -3918,6 +3936,11 @@ body[class*=jconfirm-no-scroll-] {
   position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
 	height: 0;
+  &.livestream-wrapper {
+    max-width: 896px;
+    margin: auto;
+    padding-bottom: 59.375%; //air.mozilla.org
+  }
   iframe {
     position: absolute;
     top: 0;
@@ -3926,6 +3949,7 @@ body[class*=jconfirm-no-scroll-] {
     height: 100%;
   }
 }
+
 
 
 /**
@@ -4060,7 +4084,6 @@ body[class*=jconfirm-no-scroll-] {
   span {
     color: $brand-primary;
   }
-  
   &.pending {
     background-color: #00A7E0;
   }
@@ -4087,8 +4110,169 @@ body[class*=jconfirm-no-scroll-] {
     &.banner-voting-closes {
       max-width: 260px;
     }
+    &.badge-awaiting-winners {
+      max-width: 280px;
+    }
     @include media-breakpoint-down(md) {
       margin-bottom: 30px;
     }
+  }
+}
+
+
+
+#demoday-program {
+  margin-top: 50px;
+  border-top: 5px solid #000;
+  padding-top: 20px;
+  font-family: $font-family-sans-serif;
+  font-weight: 300;
+  .program-row {
+    @include clearfix;
+    position: relative;
+    padding: 15px;
+    &:nth-child(odd) {
+      background: #f8f8f8;
+    }
+    &.row-header {
+      font-weight: 700;
+      text-transform: uppercase;
+      .col-location {
+        font-style: normal;
+        font-weight: 700;
+      }
+    }
+    .program-col {
+      float: left;
+      padding-right: 20px
+    }
+    .col-time {
+      width: 15%;
+      font-weight: 700;
+    }
+    .col-event {
+      width: 85%;
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    .program-row {
+      .program-col {
+        float: none;
+        padding-right: 0;
+      }
+      .col-time, .col-event {
+        width: 100%;
+      }
+    }
+  }
+}
+
+
+
+.winner-item {
+  text-align: center;
+  border-bottom: 5px solid #000;
+  padding: 0 0 50px;
+  &.overall-winner {
+    padding-top: 0;
+  }
+  img {
+    margin: 50px auto 30px;
+  }
+  .item-content {
+    padding: 0 100px;
+    .img-runner-up, .img-most-novel {
+      width: 100%;
+      max-width: 480px;
+      height: auto;
+    }
+    h4, .title, .url {
+      font-family: $font-family-sans-serif;
+    }
+    h4 {
+      font-size: 1.5em;
+      line-height: 1.3;
+      font-weight: 700;
+      margin: 0 0 15px; padding: 0;
+    }
+    .title {
+      font-weight: 300;
+    }
+    .url {
+      font-style: italic;
+    }
+    .description {
+      margin: 15px 0 0;
+      p {
+        margin: 0 0 20px;
+      }
+    }
+    
+    .judge-quote {
+      margin: 30px 0;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      .quote-text {
+        font-style: italic;
+      }
+      .quote-by {
+        font-family: $font-family-sans-serif;
+        text-transform: uppercase;
+        font-weight: 300;
+      }
+    }
+    
+    @include media-breakpoint-down(sm) {
+      padding: 0;
+      img {
+        margin: 30px auto 20px;
+      }
+      .img-overall-winner {
+        max-width: 290px;
+      }
+    }
+  }
+}
+
+.winner-finalist {
+  text-align: center;
+  padding: 50px 0;
+  
+  img {
+    margin: 0 auto 15px;
+  }
+  h4, .title, .url {
+    font-family: $font-family-sans-serif;
+  }
+  h4 {
+    font-size: 1.5em;
+    line-height: 1.3;
+    font-weight: 700;
+    margin: 0 0 15px; padding: 0;
+  }
+  .title {
+    font-weight: 300;
+  }
+  .url {
+    font-style: italic;
+  }
+  .description {
+    margin: 15px 0 0;
+    p {
+      margin: 0 0 20px;
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    padding: 30px 0 0;
+  }
+}
+
+
+
+
+.page-winners {
+  .page-heading {
+    text-align: center;
   }
 }
